static/css/style.css
body {
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    min-height: 100%;
    min-width: 100%;
    position: relative;
    margin: 0px;
    padding: 0px;
}

html
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

.row {
    margin-bottom: 0px;
    padding-bottom: 20px;
}

.drag-target {
    width: 0px;
}

#content {
    flex: 1 0 auto;
}

.nav-items {
    font-weight: 600;
}

#footer {
   left:0px;
   right: 0px;
   bottom: 0%;
   position: static;
   flex-shrink: 0;
}

.search-card {
    border-radius: 25px;
}

.welcome-text {
    font-size: 20px;
    margin-top: 40px;
}

.subtitle {
    font-size: 2.28rem;
    line-height: 110%;
    margin: 1.52rem 0 .912rem 0;
}

#main-heading, #error-heading {
    position: absolute;
    top: 35%;
    width: 100%;
    text-align: center;
}

.two-search-results {
    margin-left: 14%;
}

.recipe-panels {
    max-height: 800px;
}

img {
    width: 400px;
    height: 400px;
}

.card-title {
    font-size: 25px;
    padding-bottom: 15px;
    margin-left: 15px;
    margin-right: 15px;
}


.card-image {
    max-height: 100vh;
    max-width: 100%;
    object-fit:cover;
}

.vote-buttons {
    margin-top: 5px;
}

.recipe-image {
    max-width: 100%;
    max-height: 100%;
}

.recipe-page-image {
    margin-bottom: 24px;
    max-width: 400px;
    max-height: 400px; 
}

.recipe-instructions {
    margin-bottom: 24px;
}

ul {
    margin-bottom: 24px;
}

 a {
    margin : 0px;
}

h5 {
    font-size: 30px;
}

.container {
    width: 100vw;
    margin-left: 0px;
    margin-right: 0px;
}


/*-------This section is copied from css.tricks.com/perfect-full-page-background-image------*/

#landing-page {   
    position: relative;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image:url('../images/landing-page.jpg');
    min-height: 100vh;
    min-width: 100vw; 
    padding-left: 0px;
    padding-right: 0px;
    }

.contact {   
    position: relative;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image:url('../images/platter.jpg');
    min-height: 90vh;
    min-width: 100vw;
    margin-bottom: 0px; 
    }

.add-recipes {
    height: auto;
    width: 100%;
    background: url("../images/platter.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   display: flex;
   position: relative;
   margin-bottom: 0px;
   }

.recipe {
    height: auto;
    width: 100%;
    background: url("../images/table-vegetable-border.jpg") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover; 
    display: flex; 
    justify-content: center;
    position: relative;
    margin-bottom: 0px; 
   }

#error-page {
    position: relative;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image:url('../images/cover.jpg');
    min-height: 100vh;
    min-width: 100vw;
    margin-bottom: 0px;
    margin-top: 0px;
    padding-left: 0px;
    padding-right: 0px;
   }

.login {
    position: relative;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image:url('../images/raspberry.jpg');
    min-height: 95vh;
    min-width: 100vw;
    margin-bottom: 0px;
   }
    .edit-recipes {
    background: url("../images/herbs.jpg") no-repeat center center fixed; 
    min-height: 100vh;
    min-width: 100vw;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   display: flex;
   position: relative;
   }

.no-recipes {
    background-image:url('../images/wood.jpg');
    min-height: 100vh;
    min-width: 100vw;
    margin-bottom: 0px; 
    margin-top: 0px;
    padding-right: 15px;
    position: relative;
}

.admin_section {   
    position: relative;
    background-image:url('../images/herbs.jpg');
    min-height: 100vh;
    min-width: 100vw;
    margin-bottom: 0px;
    margin-top: 0px;
    } 

    */
.add-recipes-panel, .edit-recipes-panel {
    margin-top: 15%;
    margin-bottom: 15%;
    border-radius: 25px;
}

.input-field>label {
    line-height: 20px;
}

.my-recipes-cards {
    margin-bottom: 0px;
}

.title-panel {
    margin-top: 40px;
}

.title-panel, .content-panel {
    width: 75vw;
}

.contact-card, .login-panel, .add-recipes-panel, .edit-recipes-panel,
.register-panel {
    margin-top: 15%;
    margin-bottom: 15%;
    border-radius: 25px;
}

.title-text {
    margin-top: 30px;
    margin-bottom: 40px;
    font-weight: 700;
    font-size: 50px;
}

.no-recipes {
    margin-top: 5%;
    padding-bottom: 20px;
    margin-bottom: 0px;
}

.manage-account-panel {
    margin-top: 10%;
}

.reset-paragraph {
    margin-top: 20px;
}

.collapsible-body {
    padding: 0px;
}

.error-text {
    margin-top: 50%;
}

footer ul li {
  display: inline;
  margin: 5px;
}

.social-icon {
    height: 40px;
    width: 40px;
}

/* Scroll to top button from w3 Schools */
#myBtn {
  display: none; /* Hidden by default */
  position: fixed; /* Fixed/sticky position */
  bottom: 12%; /* Place the button at the bottom of the page */
  right: 30px; /* Place the button 30px from the right */
  border-radius: 50%;
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  cursor: pointer; /* Add a mouse pointer on hover */
  font-size: 18px; /* Increase font size */
  opacity: 0.3;
}

#myBtn:hover {
    opacity: 1;
}

/*---------------- Media Queries ---------------*/

@media screen and (max-width: 600px) {
 nav .brand-logo {
    font-size: 1.5rem;
  }

  h1 {
      font-size: 3.5rem;
  }
  .subtitle {
      font-size: 1.5rem;
  }
  .two-search-results {
    margin-left: 0%;
}

.contact-card, .login-panel,
.register-panel, .add-recipes-panel, .edit-recipes-panel {
    margin-top: 15%;
    margin-bottom: 15%;
    border-radius: 25px;
}

#landing-page {   
    position: relative;
    background-position: center;
    background-size: 100%;
    background-repeat: no-repeat;
    background-image:url('../images/landing-page.jpg');
    min-height: 50vh;
    min-width: 100vw; 
    padding-left: 0px;
    padding-right: 0px;
    }

.admin_section {
    padding-right: 0px;
}

.input-field>label {
    line-height: 14px;
}
}

@media screen and (min-width: 601px) {
    .my-recipes, .admin_section {   
    background-image:url('../images/wood.jpg');
    min-height: 100vh;
    min-width: 100vw;
    margin-bottom: 0px; 
    margin-top: 0px;
    padding-right: 15px;
    position: relative;
    } 

.register {
    position: relative;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image:url('../images/cookies.jpg');
    min-height: 95vh;
    min-width: 100vw;
    margin-bottom: 0px;
    margin-top: 0px;
   }
}

